# bridge_crossing

./: CMakeLists.txt  build.sh
cfg/: default_crossings.yaml  test_invalid_cfg.yaml  test_large_cfg.yaml
doc/: README.txt
src/: BridgeCrossingHandler.cpp  BridgeCrossingHandler.h  BridgeCrossingProcessor.cpp  BridgeCrossingProcessor.h  CMakeLists.txt  Makefile  bridge_crossing_exceptions.h  bridge_crossing_types.h  cmake_install.cmake  hiker.cpp  hiker.h  main.cpp
testing/: CMakeLists.txt  test_BridgeCrossingProcessor.cpp
